--- a/src/app/index.html
+++ b/src/app/index.html
@@ -154,13 +154,18 @@
                 
                 <div class="gift-wrapper">
                     <div class="gift-card">
-                        <p>dollars</p>
-                        <p>with <a href="https://paypal.me/caveljan">PayPal</a></p>
+                        <p>acryptos</p>
+                        <p>with <a target="_blank" href="https://paypal.me/caveljan">PayPal</a></p>
                     </div>
 
-                    <div class="gift-card">
-                        <p>bitcoins</p>
-                        <p id="bitcoin-address">1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                    <div class="gift-card" id="gift-card-crypto">
+                        <p>cryptos</p>
+                        <p id="gift-crypto-expand">&#9660;</p>
+                        <div id="gift-card-drawer">
+                            <p>BTC<br> <span id="btc-address">1CKoEnMU3Hy1UiWfJVBTruVSmrLvhDkXd6</span></p>
+                            <p>ETH<br> <span id="eth-address">0x91936fc5A7e13ae96273E371fD3407B0F3ABc553</span></p>
+                            <p>BCH<br> <span id="bch-address">qrlar2grfap9n86gfrm6z69yw56ezv35zyts7ufxjv</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
