Dev: text update

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -31,7 +31,7 @@
 
 
             <div class="content" id="content-about">
-                <p>We call it 'the calendar', and it has 12 months, that have sometimes 30 or 31, or even 28 or 29 days, that have 24 hours each, that have 60 minutes each. How did we get ourselves into this mess? It's time for a new time, a rational time. Starting with the name itself: the calendar.
+                <p>We call it 'the calendar', and it has 12 months, that have sometimes 30 or 31, or even 28 or 29 days, that have 24 hours each, that have 60 minutes each, that have 60 seconds each. How did we get ourselves into this mess? It's time for a new time, a rational time. Starting with the name itself: the calendar.
 
                 <p>The calendar is called thus because it comes from the way Latin Romans called the first day of the month, that is, <i>calendae</i>. But we are not Romans and we definitely do not speak Latin, do we?</p>
 
