Dev: post-delete

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -31,11 +31,11 @@
 
 
             <div class="content" id="content-about">
-                <p>We call it 'the calendar', and it has 12 months, that have sometimes 30 or 31, or even 28 or 29 days, that have 24 hours each, that have 60 minutes each, that have 60 seconds each. How did we get ourselves into this mess? It's time for a new time, a rational time. Starting with the name itself: the calendar.
+                <p>We call it 'the calendar', and it has 12 months, that have sometimes 30 or 31, or even 28 or 29 days, that have 24 hours each, that have 60 minutes each. How did we get ourselves into this mess? It's time for a new time, a rational time. Starting with the name itself: the calendar.
 
                 <p>The calendar is called thus because it comes from the way Latin Romans called the first day of the month, that is, <i>calendae</i>. But we are not Romans and we definitely do not speak Latin, do we?</p>
 
-                <p>A rational time - a time of reason, a time of here, Dazeit. One could possibly say that only that which has reason can be actually called time. We cannot really go beyond 9500 <a href="https://holoceneepoch.org">HE</a> in search for reason (not to even speak of the billion years of the pluriverse). Reason is a thing invented&amp;manufactured around 9602 <a href="https://holoceneepoch.org">HE</a>, surrounding the talks and death of Socrates. Reason, that is the secretion of a need to pursue the question 'why is that like that?' and to follow that need no matter what.</p>
+                <p>A rational time - a time of reason, a time of here, Dazeit. One could possibly say that only that which has reason can be actually called time. We cannot really go beyond 9500 <a href="https://holocenetimestamp.org">HE</a> in search for reason (not to even speak of the billion years of the pluriverse). Reason is a thing invented&amp;manufactured around 9602 <a href="https://holocenetimestamp.org">HE</a>, surrounding the talks and death of Socrates. Reason, that is the secretion of a need to pursue the question 'why is that like that?' and to follow that need no matter what.</p>
 
                 <p>The code can be seen on <a href="https://github.com/caveljan/dazeit">github</a>.</p>
 
