Dev: index clear

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -16,7 +16,9 @@
     </head>
     <body>
         <nav>
-            <h1><a href="https://ratioanltime.org">Dazeit</a></h1>
+            <h1>
+                <a href="https://dazeit.org">Dazeit</a>
+            </h1>
         </nav>
 
 
@@ -35,9 +37,9 @@
 
                 <p>The calendar is called thus because it comes from the way Latin Romans called the first day of the month, that is, <i>calendae</i>. But we are not Romans and we definitely do not speak Latin, do we?</p>
 
-                <p>A rational time - a time of reason, a time of here, Dazeit. One could possibly say that only that which has reason can be actually called time. We cannot really go beyond 9500 <a href="https://holocenetimestamp.org">HE</a> in search for reason (not to even speak of the billion years of the pluriverse). Reason is a thing invented&amp;manufactured around 9602 <a href="https://holocenetimestamp.org">HE</a>, surrounding the talks and death of Socrates. Reason, that is the secretion of a need to pursue the question 'why is that like that?' and to follow that need no matter what.</p>
+                <p>A rational time - a time of reason, a time of here, Dazeit. One could possibly say that only that which has reason can be actually called time. We cannot really go beyond 9500 <a target="_blank" href="https://holocenetimestamp.org">HE</a> in search for reason (not to even speak of the billion years of the pluriverse). Reason is a thing invented&amp;manufactured around 9602 <a target="_blank" href="https://holocenetimestamp.org">HE</a>, surrounding the talks and death of Socrates. Reason, that is the secretion of a need to pursue the question 'why is that like that?' and to follow that need no matter what.</p>
 
-                <p>The code can be seen on <a href="https://github.com/caveljan/dazeit">github</a>.</p>
+                <p>The code can be seen on <a target="_blank" href="https://github.com/caveljan/dazeit">github</a>.</p>
 
                 <p>The Rational Time presented here has as fundamental unit of time the <span class="span-accent">blink</span>.</p> 
 
@@ -98,11 +100,11 @@
                 <p>The following images synthesize the inception:</p>
 
                 <img class="responsive-image" src="./assets/images/Dazeit-generalMathematics-sm.jpg">
-                <p class="large-image"><a href="./assets/images/Dazeit-generalMathematics.png">large image</a></p>
+                <p class="large-image"><a target="_blank" href="./assets/images/Dazeit-generalMathematics.png">large image</a></p>
                 <img class="responsive-image" src="./assets/images/Dazeit-divisions-sm.jpg">
-                <p class="large-image"><a href="./assets/images/Dazeit-divisions.png">large image</a></p>
+                <p class="large-image"><a target="_blank" href="./assets/images/Dazeit-divisions.png">large image</a></p>
                 <img class="responsive-image" src="./assets/images/Dazeit-aCylipse-sm.jpg">
-                <p class="large-image"><a href="./assets/images/Dazeit-aCylipse.png">large image</a></p>
+                <p class="large-image"><a target="_blank" href="./assets/images/Dazeit-aCylipse.png">large image</a></p>
             </div>
 
             <div class="content" id="content-conversion">
@@ -143,7 +145,8 @@
                     <div id="rational-time"></div>
                 </div>
 
-                <label id="holocene" for="holocene-mark">Use the <a href="https://holoceneepoch.org">Holocene Epoch</a>
+                <label id="holocene" for="holocene-mark">
+                    Use the <a target="_blank" href="https://holocenetimestamp.org">Holocene Epoch</a>
                     <input type="checkbox" id="holocene-mark" name="holocene-mark">
                     <span id="holocene-checkmark"></span>
                 </label>
@@ -173,7 +176,7 @@
 
 
         <footer id="footer">
-            <p>a <a href="https://caveljan.com">caveljan</a> realization</p>
+            <p>a <a target="_blank" href="https://caveljan.com">caveljan</a> realization</p>
         </footer>
 
         <script type="text/javascript" src="script.js"></script>
